# equiboots

./: .gitignore  =0.13.0  =0.5.3  README.md  README_min.md  paper.bib  paper.md  pyproject.toml  requirements.txt
docs/.doctrees/: acknowledgements.doctree  changelog.doctree  citations.doctree  contributors.doctree  environment.pickle  getting_started.doctree  index.doctree  references.doctree
notebooks/: Fairness_analysis_and_Threshold_Adjustments_for_Machine_Learning_Models_colab.ipynb  adult_income_classification.ipynb  adult_income_updatd_colab_example.ipynb  equi_boots_plots.ipynb  equiboots_tables.ipynb  jupytercon_recording.ipynb  jupyterconexample.ipynb  test_plot_exceptions.ipynb  threshold_model_healing_colab.ipynb
py_scripts/: adult_income_chi_squared_test.py  bootstrapplottest.py  functions.py  plot_classification_test.py  plot_regression_test.py  plot_statistical_tests.py  pointestimateplottest.py  statistical_tables.py  statistical_test_demo.py  testingscript.py
source/: equiboots_class.rst  index.rst
src/equiboots/: EquiBootsClass.py  StatisticalTester.py  __init__.py  healer.py  metrics.py  plots.py  tables.py
unittests/: test_EquiBoots.py  test_custom_help.py  test_healer.py  test_metrics.py  test_plots.py  test_statistics.py  test_tables.py
